--- a/mobile/src/main/res/layout/content_scrolling.xml
+++ b/mobile/src/main/res/layout/content_scrolling.xml
@@ -26,7 +26,7 @@
             app:color="?colorPrimary"
             app:backgroundColor="?colorPrimaryDark"
             app:textColor="?colorAccent"/>
-        <net.tofvesson.coloursbycontrol.view.StackPushCard
+        <net.tofvesson.coloursbycontrol.view.ConstantCard
             android:id="@+id/stackPush"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
